--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "@types/node": "^10.11.3",
     "@types/request-promise": "^4.1.42",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.1"
+    "typescript": "^3.5.2"
   },
   "dependencies": {
-    "@octokit/rest": "^15.12.1",
+    "@octokit/rest": "^15.18.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
+  },
+  "engines": {
+    "node": "10"
   },
   "scripts": {
     "deploy": "tsc && gcloud functions deploy updateConversionFile --trigger-topic daily-tick"
